syntax = "proto3";

package rhythmony.metadata;
option go_package = "pb/";
option java_package = "com.rhythmony.metadata.pb";
option java_outer_classname = "TrackAPIProto";
option java_multiple_files = true;

import "artist.proto";
import "album.proto";

service TrackAPI {
  rpc GetTrackById(GetTrackByIdRequest) returns (GetTrackByIdResponse);
  rpc ListSeveralTracks(ListSeveralTracksRequest) returns (ListSeveralTracksResponse);
  rpc CreateTrack(CreateTrackRequest) returns (CreateTrackResponse);
  rpc UpdateTrack(UpdateTrackRequest) returns (UpdateTrackResponse);
  rpc DeleteTrack(DeleteTrackRequest) returns (DeleteTrackResponse);
}

message Track {
  string id = 1;
  string title = 2;
  int32 disc_number = 3;
  int32 duration_ms = 4;
  bool explicit = 5;
  string type = 6;
  string lyrics = 7;
  int32 popularity = 8;
  repeated Artist artists = 9;
  repeated Album albums = 10;
}

message GetTrackByIdRequest {
  string id = 1;
}

message GetTrackByIdResponse {
  Track track = 1;
}

message ListSeveralTracksRequest {
  uint64 page_size = 1;
  uint64 page_no = 2;
}

message ListSeveralTracksResponse {
  uint64 page_size = 1;
  uint64 page_no = 2;
  uint64 total_pages = 3;
  uint64 total_elements = 4;
  repeated Track tracks = 5;
}

message CreateTrackRequest {
  string title = 1;
  bool explicit = 2;
  string lyrics = 3;
}

message CreateTrackResponse {
  Track track = 1;
  string message = 2;
}

message UpdateTrackRequest {
  string id = 1;
}

message UpdateTrackResponse {
  Track track = 1;
  string message = 2;
}

message DeleteTrackRequest {
  string id = 1;
}

message DeleteTrackResponse {
  string message = 1;
}